5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1745_3087.log
== TEST (2019-05-15 14:42:41) 
-- CODE:
n = int(input("Numeros inteiros: "))
d = 0
soma = 0

while( n != 0):
	if( n%2 == 0):
		d = d + 1
		soma = soma + n
		n = int(input("Numeros inteiros: "))
		
	else:
		d = d + 1
		soma = soma + n
		n = int(input("Numeros inteiros: "))
m = soma/d
print(round(m, 2))
-- OUTPUT:
-6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:21) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1))
print(round(soma2/d2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:36) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1))
print(round(soma2/d2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:22) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1))
print(round(soma2/d2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:59:48) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1))
print(round(soma2/d2))
-- EXECUTION TIME:
0.227062
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/3087/main.py", line 19, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:37) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma2/d2))
print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:36) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma2/d2))
print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:02:08) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma2/d2))
print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:03:55) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))
print(round(soma2/d2))
print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:04:19) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))
	print(round(soma2/d2))
	print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:00) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))
	
	print(round(soma2/d2))
	print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:11) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))
	
	print(round(soma2/d2))
	print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:30) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma2/d2))
print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:06:05) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1))
print(round(soma2/d2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:07:15) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	
	if( n%2 == 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma2/d2))
print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:08:54) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma2/d2))
print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:08:55) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma2/d2))
print(round(soma1/d1))
-- EXECUTION TIME:
0.136108
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/3087/main.py", line 19, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:08:56) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma2/d2))
print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:45) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma2/d2))
print(round(soma1/d1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(soma2/d2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:33) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma2/d2, 1))
print(round(soma1/d1, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(soma2/d2, 1))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:20) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1, 1))
print(round(soma2/d2, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(round(soma2/d2, 1))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:14:00) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		
		d1 = d1 + 1
		a = d1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/a, 1))
print(round(soma2/d2, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(round(soma2/d2, 1))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:14:21) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		
		d1 = d1 + 1
		a = d1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/a, 1))
print(round(soma2/d2, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(round(soma2/d2, 1))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:51) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0):
		
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1, 1))
print(round(soma2/d2, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(round(soma2/d2, 1))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:46) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0


	if( n%2 == 0):
		while(n != 0):
			d1 = d1 + 1
			soma1 = soma1 + n 
			n = int(input("Numeros inteiros: "))
	else:
		while(n != 0):
			d2 = d2 + 1
			soma2 = soma2 + n
			n = int(input("Numeros inteiros: "))

print(round(soma1/d1, 1))
print(round(soma2/d2, 1))
-- ERROR:
File "XXXX", line 8
    if( n%2 == 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:25:04) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

if( n%2 == 0):
	while(n != 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
else:
	while(n != 0):
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1, 1))
print(round(soma2/d2, 1))
-- EXECUTION TIME:
0.213213
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/3087/main.py", line 19, in <module>
    print(round(soma2/d2, 1))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:06) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

if( n%2 == 0):
	while(n != 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
else:
	while(n != 0):
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1, 1))
print(round(soma2/d2, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(soma2/d2, 1))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:49) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

if( n%2 == 0):
	while(n != 0):
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
else:
	while(n != 0):
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1, 1))
print(round(soma2/d2, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(soma2/d2, 1))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:48:35) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0 and n != 0):
		
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1, 1))
print(round(soma2/d2, 1))
-- EXECUTION TIME:
0.134927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/3087/main.py", line 20, in <module>
    print(round(soma2/d2, 1))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:48:43) 
-- CODE:
n = int(input("Numeros inteiros: "))
d1 = 0
d2 = 0
soma1 = 0
soma2 = 0

while( n != 0):
	if( n%2 == 0 and n !=0 ):
		
		d1 = d1 + 1
		soma1 = soma1 + n 
		n = int(input("Numeros inteiros: "))
		
	else:
		d2 = d2 + 1
		soma2 = soma2 + n
		n = int(input("Numeros inteiros: "))

print(round(soma1/d1, 1))
print(round(soma2/d2, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(round(soma2/d2, 1))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
